--- a/src/main/resources/view/place_order_form.fxml
+++ b/src/main/resources/view/place_order_form.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
@@ -88,5 +89,6 @@
          </font>
       </Label>
       <TextField fx:id="txtOrderId" layoutX="175.0" layoutY="78.0" prefHeight="25.0" prefWidth="64.0" />
+      <Button layoutX="400.0" layoutY="410.0" mnemonicParsing="false" onAction="#btnCommitOnAction" text="Commit" />
    </children>
 </AnchorPane>
